Add favorites logic with cart check for auth users